crates/lingui_macro/tests/snapshots/jsx_icu__jsx_trans_inside_plural.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
import { Trans, Plural } from '@lingui/macro';
 <Plural
   value={count}
   one={
     <Trans>
       <strong>#</strong> slot added
     </Trans>
   }
   other={
     <Trans>
       <strong>#</strong> slots added
     </Trans>
   }
 />;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "X8eyr1",
    values: {
        count: count
    },
    components: {
        0: <strong/>,
        1: <strong/>
    },
    message: "{count, plural, one {<0>#</0> slot added} other {<1>#</1> slots added}}"
}}/>;
