crates/lingui_macro/tests/snapshots/jsx_icu__multiple_new_lines_with_nbsp_endind.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>
  Line ending in non-breaking space.&nbsp;
  <strong>text in element</strong>
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "CJuEhi",
    components: {
        0: <strong/>
    },
    message: "Line ending in non-breaking space. <0>text in element</0>"
}}/>;
