crates/lingui_macro/tests/snapshots/jsx_icu__with_non_identifier_value_first.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
import { Plural } from '@lingui/react/macro';
<Plural value={items.length} one={`${a.b} glass`} other="many" />

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "1D4idA",
    values: {
        0: items.length,
        1: a.b
    },
    message: "{0, plural, one {{1} glass} other {many}}"
}}/>;
